refactor(auth-14): emit event when user created